2005-06-18  Albert Chu  <chu11@llnl.gov>

	* Various minor fixes.
	
2005-06-17  Albert Chu  <chu11@llnl.gov>

	* Minor cleanup.

	* Significant libcerebro code cleanup, module library code split
	up.

	* tagged pre-library-reorg-1

 	* Library reorganization.

	* New libcerebro_error library.
	
2005-06-16  Albert Chu  <chu11@llnl.gov>

	* Fixed up locking issues.

	* Marshall library cleanup.

	* Error library cleanup.

	* Various bug fixing

	* tagged pre-static-compilation-remove-1

	* Removed everything related to static compilation.

	* tagged post-static-compilation-remove-1

	* Various calculation tweaks and bug fixes.

	* Monitor module tweaking.

	* cerebrod speaker logic fixing.

	* Metric module tweaking.
	
2005-06-15  Albert Chu  <chu11@llnl.gov>

	* Fixed static compilation bugs.

	* Remove hostlist files.

	* New libmarshall library.  Rework libcerebro and cerebrod around
	new lib.

	* Various cleanup fixes.

	* Implemented and use new marshall wrapper functions.
	
2005-06-14  Albert Chu  <chu11@llnl.gov>

	* Added finishing touches to monitor support in cerebrod.

	* Bug fixes to get bootlog monitoring to work.

	* cerebro.spec.in, Makefile, autoconf: Varoius updates for new
	appropriate packages and builds.
	
2005-06-13  Albert Chu  <chu11@llnl.gov>

	* Rename monitor module metric module in preparation for changes.

	* tagged pre-monitor-module-2

	* Added monitor module support.

	* Added bootlog monitor module.

	* Added monitor module support to libcerebro.

	* Begin adding monitor support in cerebrod.
	
2005-06-10  Albert Chu  <chu11@llnl.gov>

	* Various code cleanup.

2005-06-09  Albert Chu  <chu11@llnl.gov>

	* Added support for CEREBRO_METRIC_FLAGS_NONE_IF_DOWN flag.

	* tagged pre-monitor-module-1

	* Various code cleanup
	
	* Added new monitoring modules support.

	* Added boottime monitor module.

	* Added monitor module support to libcerebro.

	* Use boottime module rather than hardcoded boottime in cerebrod.
