@@ -1,5 +1,5 @@
 ##*****************************************************************************
-## $Id: Makefile.am,v 1.5 2005-06-18 00:14:39 achu Exp $
+## $Id: Makefile.am,v 1.6 2005-06-18 06:47:06 achu Exp $
 ##*****************************************************************************
 ## Process this file with automake to produce Makefile.in.
 ##*****************************************************************************
@@ -11,5 +11,6 @@
 
 SUBDIRS = cerebro_error \
 	  cerebro \
-	  common
+	  common \
+	  modules \
 	  include
