@@ -1,5 +1,5 @@
 /*****************************************************************************\
- *  $Id: cerebro_module_config.h,v 1.1 2005-06-17 20:54:08 achu Exp $
+ *  $Id: cerebro_module_config.h,v 1.1 2005-06-18 06:47:06 achu Exp $
 \*****************************************************************************/
 
 #ifndef _CEREBRO_MODULE_CONFIG_H
