@@ -1,6 +1,8 @@
 2005-06-18  Albert Chu  <chu11@llnl.gov>
 
 	* Various minor fixes.
+
+	* Split off libcerebro modules library into libmodules.
 	
 2005-06-17  Albert Chu  <chu11@llnl.gov>
 
